# derive_builder_json_placeholder

./: Cargo.toml  README.md
src/: api.rs  lib.rs
src/api/: client.rs  endpoint.rs  endpoint_prelude.rs  params.rs  query.rs  resource.rs  user.rs
