[package]
name = "derive_builder_json_placeholder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
derive_builder = "0.12.0"
http = "1.0.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
url = "2.5.0"
